Adding fk-landing page to this instance.

--- a/nginx/Dockerfile
+++ b/nginx/Dockerfile
@@ -2,5 +2,4 @@ FROM nginx
 COPY nginx /etc/nginx
 COPY letsencrypt /etc/letsencrypt
 RUN apt-get update && apt-get install -yy curl
-RUN mkdir /var/lib/jenkins_artifacts
-RUN ls -al /etc/nginx/
+RUN mkdir -p /var/lib/jenkins_artifacts /var/www/conservify.org /var/www/fieldkit.org
