Some Makefile changes.

--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -1,9 +1,15 @@
+all: terraform.tfplan
+
+apply: terraform.tfplan
+	terraform apply
+
+terraform.tfplan: fk_enqueue.zip
+	terraform plan -out=terraform.tfplan
+
+clean:
+	rm -rf terraform.tfplan
+
 fk_enqueue.zip: fk_enqueue.py
 	zip -o $@ $^
 
-plan: fk_enqueue.zip
-	terraform plan
-
-apply: fk_enqueue.zip
-	terraform apply
-
+.PHONY: all apply clean
