Playing with terraform config for starting instances.

--- a/terraform/Makefile
+++ b/terraform/Makefile
@@ -1,9 +1,9 @@
-all: terraform.tfplan
+all: fk_enqueue.zip terraform.tfplan 
 
 apply: terraform.tfplan
 	terraform apply
 
-terraform.tfplan: fk_enqueue.zip
+terraform.tfplan:
 	terraform plan -out=terraform.tfplan
 
 clean:
@@ -11,5 +11,8 @@ clean:
 
 fk_enqueue.zip: fk_enqueue.py
 	zip -o $@ $^
+
+setup:
+	go get -u github.com/coreos/terraform-provider-ct
 
 .PHONY: all apply clean
