Fix startup, use latest container image.

--- a/terraform/fk-app-server.yaml
+++ b/terraform/fk-app-server.yaml
@@ -27,7 +27,7 @@ systemd:
         ExecStartPre=-/usr/bin/docker kill fk-app
         ExecStartPre=-/usr/bin/docker rm fk-app
         ExecStartPre=/usr/bin/docker pull ${app_server_container}
-        ExecStart=/usr/bin/docker run -e FIELDKIT_POSTGRES_URL=${db_url} --name fk-app -p 80:80 ${app_server_container}
+        ExecStart=/usr/bin/docker run -e FIELDKIT_DOMAIN=${zone_name} -e FIELDKIT_LANDING_ROOT=/landing -e FIELDKIT_ADMIN_ROOT=/admin -e FIELDKIT_FRONTEND_ROOT=/frontend -e FIELDKIT_POSTGRES_URL=${db_url} --name fk-app -p 80:80 ${app_server_container}
         ExecStop=/usr/bin/docker stop fk-app
 
         [Install]
