--- a/terraform/fk-app-server.yaml
+++ b/terraform/fk-app-server.yaml
@@ -3,6 +3,14 @@
 
 ---
 etcd:
+  version:                     "3.0.15"
+  name:                        "{HOSTNAME}"
+  advertise_client_urls:       "http://{PRIVATE_IPV4}:2379"
+  initial_advertise_peer_urls: "http://{PRIVATE_IPV4}:2380"
+  listen_client_urls:          "http://0.0.0.0:2379"
+  listen_peer_urls:            "http://{PRIVATE_IPV4}:2380"
+  initial_cluster:             "{HOSTNAME}=http://{PRIVATE_IPV4}:2380"
+
 storage:
   files:
     - filesystem: "root"
