--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -19,6 +19,7 @@ services:
     depends_on:
       - logs
     environment:
+      JAVA_OPTS: -Dorg.apache.commons.jelly.tags.fmt.timeZone=America/Los_Angeles
       JENKINS_OPTS: --prefix=/jenkins
     volumes:
       - /svr0/jenkins:/var/jenkins_home
