--- a/docker/glacier-status/Makefile
+++ b/docker/glacier-status/Makefile
@@ -1,2 +1,3 @@
 all:
-	docker build --rm -t conservify/glacier-status .
+	rsync -zvua --progress ~/glacier/ glacier/
+	docker build --no-cache --rm -t conservify/glacier-status .
