--- a/terraform/fk/fk-app-server.yaml
+++ b/terraform/fk/fk-app-server.yaml
@@ -18,6 +18,16 @@ storage:
       mode:       0644
       contents:
         inline: ${hostname}
+    - filesystem: "root"
+      path:       "/etc/docker/compose/fieldkit.env"
+      mode:       0644
+      contents:
+        inline: |
+          FIELDKIT_DOMAIN=${zone_name}
+          FIELDKIT_LANDING_ROOT=/landing
+          FIELDKIT_ADMIN_ROOT=/admin
+          FIELDKIT_FRONTEND_ROOT=/frontend
+          FIELDKIT_POSTGRES_URL=${db_url}
 
 locksmith:
   reboot_strategy: "reboot"
@@ -39,6 +49,35 @@ systemd:
         ExecStartPre=/usr/bin/docker pull ${app_server_container}
         ExecStart=/usr/bin/docker run -e FIELDKIT_DOMAIN=${zone_name} -e FIELDKIT_LANDING_ROOT=/landing -e FIELDKIT_ADMIN_ROOT=/admin -e FIELDKIT_FRONTEND_ROOT=/frontend -e FIELDKIT_POSTGRES_URL=${db_url} --name fk-app -p 80:80 ${app_server_container}
         ExecStop=/usr/bin/docker stop fk-app
+
+        [Install]
+        WantedBy=multi-user.target
+    - name: fk.service
+      enable: true
+      enabled: true
+      contents: |
+        [Unit]
+        Description=fk service with docker compose
+        Wants=docker.service
+
+        [Service]
+        Restart=always
+        TimeoutStartSec=0
+        WorkingDirectory=/etc/docker/compose
+
+        # Remove old containers, images and volumes
+        ExecStartPre=/usr/bin/docker pull ${app_server_container}
+        ExecStartPre=/opt/bin/docker-compose -f /etc/docker/compose/fk-compose.yml down -v
+        ExecStartPre=/opt/bin/docker-compose -f /etc/docker/compose/fk-compose.yml rm -v
+        ExecStartPre=-/bin/bash -c 'docker volume rm $(docker volume ls -q)'
+        ExecStartPre=-/bin/bash -c 'docker rmi $(docker images | grep "<none>" | awk \'{print $3}\')'
+        ExecStartPre=-/bin/bash -c 'docker rm -v $(docker ps -aq)'
+
+        # Compose up
+        ExecStart=/opt/bin/docker-compose -f /etc/docker/compose/fk-compose.yml up
+
+        # Compose down, remove containers and volumes
+        ExecStop=/opt/bin/docker-compose -f /etc/docker/compose/fk-compose.yml down -v
 
         [Install]
         WantedBy=multi-user.target
