Allow from admin@fkdev.org and enable the AWS emailer.

--- a/terraform/fk/fk-app-server.yml
+++ b/terraform/fk/fk-app-server.yml
@@ -28,6 +28,7 @@ storage:
           FIELDKIT_ADMIN_ROOT=/admin
           FIELDKIT_FRONTEND_ROOT=/frontend
           FIELDKIT_POSTGRES_URL=${db_url}
+          FIELDKIT_EMAILER=aws
 
 locksmith:
   reboot_strategy: "reboot"
