--- a/terraform/fk/fk-app-server.yml
+++ b/terraform/fk/fk-app-server.yml
@@ -29,6 +29,7 @@ storage:
           FIELDKIT_FRONTEND_ROOT=/frontend
           FIELDKIT_POSTGRES_URL=${db_url}
           FIELDKIT_EMAILER=aws
+          FIELDKIT_ARCHIVER=aws
 
 locksmith:
   reboot_strategy: "reboot"
