--- a/terraform/fk/fk-compose.yml
+++ b/terraform/fk/fk-compose.yml
@@ -8,6 +8,7 @@ services:
       - fieldkit.env
   grafana:
     image: grafana/grafana
+    command: echo "grafana disabled"
     ports:
       - "3000:3000"
     volumes:
@@ -18,6 +19,7 @@ services:
       - GF_INSTALL_PLUGINS=grafana-clock-panel,grafana-simple-json-datasource
   influxdb:
     image: influxdb
+    command: echo "influx disabled"
     volumes:
       - /data/influxdb-storage:/var/lib/influxdb
     environment:
