Expose glacier data archive.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -39,6 +39,7 @@ services:
     image: "nginx-rproxy"
     volumes:
       - /svr0/distribution:/var/lib/distribution
+      - /svr0/glacier:/var/lib/glacier-data
     links:
       - spotify
       - jenkins
