--- a/distribution/Jenkinsfile
+++ b/distribution/Jenkinsfile
@@ -1,6 +1,7 @@
 properties([
     [$class: 'BuildDiscarderProperty', strategy: [$class: 'LogRotator', numToKeepStr: '5']],
     pipelineTriggers([[$class: 'GitHubPushTrigger']]),
+    disableConcurrentBuilds(),
 ])
 
 timestamps {
