Copy artifacts to build dir.

--- a/distribution/Jenkinsfile
+++ b/distribution/Jenkinsfile
@@ -13,13 +13,13 @@ timestamps {
         }
 
         stage ('archive') {
+            sh "cp artifacts/* build"
             archiveArtifacts artifacts: 'build/*'
         }
 
         stage ('publish') {
             sh "cp artifacts/*.template /var/lib/distribution"
             sh "cp artifacts/favicon.png /var/lib/distribution"
-            sh "cp build/artifacts-publisher /var/lib/distribution"
 
             refreshDistribution()
         }
