Add a docker container for the glacier renderer.

--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -47,6 +47,7 @@ services:
       - fk-landing
       - logs
       - glacier-status
+      - glacier-renderer
       - logs-viewer
       - jira
     extra_hosts:
@@ -89,6 +90,14 @@ services:
       - /var/log:/var/log
     ports:
       - "8000:8000"
+  glacier-renderer:
+    image: conservify/glacier-renderer
+    depends_on:
+      - logs
+    volumes:
+      - /svr0/glacier/archive:/svr0/glacier/archive
+    ports:
+      - "9090:9090"
   spotify:
     image: jlewallen/play-zones:master
     volumes:
