--- a/docker/docker-compose.yml
+++ b/docker/docker-compose.yml
@@ -40,6 +40,7 @@ services:
     volumes:
       - /svr0/distribution:/var/lib/distribution
       - /svr0/glacier:/var/lib/glacier-data
+      - /svr0/web/code.conservify.org:/var/www/conservify.org
     links:
       - spotify
       - jenkins
