Adding doxygen. Install virtualenv for python3 too.

--- a/docker/jenkins/server/Dockerfile
+++ b/docker/jenkins/server/Dockerfile
@@ -1,7 +1,8 @@
 FROM jenkins/jenkins:lts
 USER root
-RUN dpkg --add-architecture i386 && apt-get update && apt-get install -yy libc6:i386 build-essential zlib1g zlib1g:i386 python-pip zip
+RUN dpkg --add-architecture i386 && apt-get update && apt-get install -yy libc6:i386 build-essential zlib1g zlib1g:i386 python3-pip python-pip zip doxygen
 RUN pip install virtualenv
+RUN pip3 install virtualenv
 WORKDIR /tmp
 RUN wget https://dl.google.com/go/go1.12.linux-amd64.tar.gz && tar -C /usr/local -xzf go1.12.linux-amd64.tar.gz
 RUN wget https://nodejs.org/dist/v8.12.0/node-v8.12.0-linux-x64.tar.xz && tar -C /usr/local -xf node-v8.12.0-linux-x64.tar.xz && mv /usr/local/node-* /usr/local/node
