Updated terraform scripts, adding new AMI construction stuff.

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,26 @@
-docker/nginx/letsencrypt*
-vpn.env
-lambda/config.py
 *.zip
-config.py
 *.swo
 *.swp
-data
+
+build
+
+.env
+vpn.env
+aws.env
+
+artifacts/artifacts-publisher
+docker/nginx/letsencrypt*
 docker/logs.env
 docker/logs/data
 docker/logs/journal
 docker/logs/config/node-id
 htpasswd
 glacier
-build
-artifacts/artifacts-publisher
 
 schema.sql
 data.sql
 TM_WORLD_BORDERS-0.3.sql
 TM_WORLD_BORDERS_SIMPL-0.3.sql
+
+*.tfstate*
+*.tfvars*
