--- a/terraform/fk/fk-app-server.yml
+++ b/terraform/fk/fk-app-server.yml
@@ -26,7 +26,7 @@ storage:
           FIELDKIT_DOMAIN=${zone_name}
           FIELDKIT_PORTAL_ROOT=/portal
           FIELDKIT_LEGACY_ROOT=/legacy
-          FIELDKIT_POSTGRES_URL=${db_url}
+          FIELDKIT_POSTGRES_URL=${database_url}
           FIELDKIT_EMAILER=aws
           FIELDKIT_ARCHIVER=aws
           FIELDKIT_PRODUCTION_LOGGING=true
@@ -49,7 +49,7 @@ systemd:
         ExecStartPre=-/usr/bin/docker kill fk-app
         ExecStartPre=-/usr/bin/docker rm fk-app
         ExecStartPre=/usr/bin/docker pull ${app_server_container}
-        ExecStart=/usr/bin/docker run -e FIELDKIT_DOMAIN=${zone_name} -e FIELDKIT_LANDING_ROOT=/landing -e FIELDKIT_ADMIN_ROOT=/admin -e FIELDKIT_FRONTEND_ROOT=/frontend -e FIELDKIT_POSTGRES_URL=${db_url} --name fk-app -p 80:80 ${app_server_container}
+        ExecStart=/usr/bin/docker run -e FIELDKIT_DOMAIN=${zone_name} -e FIELDKIT_LANDING_ROOT=/landing -e FIELDKIT_ADMIN_ROOT=/admin -e FIELDKIT_FRONTEND_ROOT=/frontend -e FIELDKIT_POSTGRES_URL=${database_url} --name fk-app -p 80:80 ${app_server_container}
         ExecStop=/usr/bin/docker stop fk-app
 
         [Install]
