Fix typo in image name

--- a/amis/docker-compose.yaml
+++ b/amis/docker-compose.yaml
@@ -1,7 +1,7 @@
 version: "3.7"
 services:
   front-envoy:
-    image: "conservify/proxy-envoy:${TAG}"
+    image: "conservify/envoy-proxy:${TAG}"
     networks:
       - envoy-mesh
     expose:
