--- a/amis/files/docker-compose@.service
+++ b/amis/files/docker-compose@.service
@@ -8,6 +8,7 @@ Restart=always
 
 WorkingDirectory=/etc/docker/compose/%i
 
+ExecStartPre=-/bin/bash -c "cat *_*.env > .env"
 ExecStart=/usr/bin/docker-compose up
 
 ExecStop=/usr/bin/docker-compose down
