Pass env tag and setup gelf logging in docker compose.

--- a/amis/docker-compose.yaml
+++ b/amis/docker-compose.yaml
@@ -10,6 +10,11 @@ services:
     ports:
       - "8000:80"
       - "8001:8001"
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${GELF_URL}"
+        tag: "${GELF_TAGS}"
 
   service1:
     image: "conservify/dummy-service:${TAG}"
@@ -21,6 +26,11 @@ services:
       - SERVICE_NAME=1
     expose:
       - "80"
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${GELF_URL}"
+        tag: "${GELF_TAGS}"
 
   service2:
     image: "conservify/dummy-service:${TAG}"
@@ -32,6 +42,11 @@ services:
       - SERVICE_NAME=2
     expose:
       - "80"
+    logging:
+      driver: "gelf"
+      options:
+        gelf-address: "${GELF_URL}"
+        tag: "${GELF_TAGS}"
 
 networks:
   envoy-mesh: {}
