--- a/amis/files/telegraf.conf
+++ b/amis/files/telegraf.conf
@@ -16,11 +16,7 @@
 
 # Global tags can be specified here in key="value" format.
 [global_tags]
-  # dc = "us-east-1" # will tag all metrics with dc=us-east-1
-  # rack = "1a"
-  ## Environment variables can be used as tags, and throughout the config file
-  # user = "$USER"
-
+  env = "${ENV_TAG}"
 
 # Configuration for telegraf agent
 [agent]
