Install a timer for doing maintenance.

--- a/terraform/fk/Makefile
+++ b/terraform/fk/Makefile
@@ -1,5 +1,9 @@
 all: terraform.tfplan
 
+plan:
+	terraform get
+	terraform plan -out=terraform.tfplan
+
 apply: terraform.tfplan
 	terraform apply
 
