--- a/amis/services/fk-cloud-proxy/envoy-proxy.yaml
+++ b/amis/services/fk-cloud-proxy/envoy-proxy.yaml
@@ -19,44 +19,26 @@ static_resources:
               - "*"
               routes:
               - match:
-                  prefix: "/service/1"
+                  prefix: "/"
                 route:
-                  cluster: service1
-              - match:
-                  prefix: "/service/2"
-                route:
-                  cluster: service2
+                  cluster: fk-cloud-service
           http_filters:
           - name: envoy.router
             typed_config: {}
   clusters:
-  - name: service1
+  - name: fk-cloud-service
     connect_timeout: 0.25s
     type: strict_dns
     lb_policy: round_robin
     http2_protocol_options: {}
     load_assignment:
-      cluster_name: service1
+      cluster_name: fk-cloud-service
       endpoints:
       - lb_endpoints:
         - endpoint:
             address:
               socket_address:
-                address: service1
-                port_value: 80
-  - name: service2
-    connect_timeout: 0.25s
-    type: strict_dns
-    lb_policy: round_robin
-    http2_protocol_options: {}
-    load_assignment:
-      cluster_name: service2
-      endpoints:
-      - lb_endpoints:
-        - endpoint:
-            address:
-              socket_address:
-                address: service2
+                address: fk-cloud-service
                 port_value: 80
 admin:
   access_log_path: "/dev/null"
