--- a/amis/stacks/fk-cloud-stack/docker-compose.yaml
+++ b/amis/stacks/fk-cloud-stack/docker-compose.yaml
@@ -20,6 +20,14 @@ services:
     image: "conservify/fk-cloud-service:${TAG}"
     networks:
       - envoy-mesh
+    environment:
+      - FIELDKIT_POSTGRES_URL=${DATABASE_URL}
+      - FIELDKIT_DOMAIN=${ZONE_NAME}
+      - FIELDKIT_PORTAL_ROOT=/app/portal
+      - FIELDKIT_LEGACY_ROOT=/app/legacy
+      - FIELDKIT_EMAILER=aws
+      - FIELDKIT_ARCHIVER=aws
+      - FIELDKIT_PRODUCTION_LOGGING=true
     expose:
       - "80"
     logging:
