Enable require_tls on envoy proxy.

--- a/amis/services/fk-cloud-proxy/envoy-proxy.yaml
+++ b/amis/services/fk-cloud-proxy/envoy-proxy.yaml
@@ -15,6 +15,7 @@ static_resources:
             name: local_route
             virtual_hosts:
             - name: backend
+              require_tls: EXTERNAL_ONLY
               domains:
               - "*"
               routes:
