--- a/amis/services/fk-cloud-proxy/envoy-proxy.yaml
+++ b/amis/services/fk-cloud-proxy/envoy-proxy.yaml
@@ -11,6 +11,7 @@ static_resources:
           "@type": type.googleapis.com/envoy.config.filter.network.http_connection_manager.v2.HttpConnectionManager
           codec_type: auto
           stat_prefix: ingress_http
+          use_remote_address: true
           route_config:
             name: local_route
             virtual_hosts:
